Add simple page-example consist of subcomponents and sub-webcomponents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<user-poll *ngIf="!hide"></user-poll><br>
-<button (click)="hide = !hide">Toggle poll component</button><br>
-#destroying object wil throw an error (ZoneJS) - only in local development
-<hr>
+<webcomponent-page></webcomponent-page>
