--- a/src/app/user-poll/user-poll.component.scss
+++ b/src/app/user-poll/user-poll.component.scss
@@ -1,7 +1,4 @@
-@import '../../../node_modules/bootstrap/scss/functions';
-@import '../../../node_modules/bootstrap/scss/variables';
-@import '../../../node_modules/bootstrap/scss/mixins';
-@import '../../../node_modules/bootstrap/scss/buttons';
-@import '../../../node_modules/bootstrap/scss/progress';
-@import '../../../node_modules/bootstrap/scss/grid';
-
+.user-poll {
+  border: 2px solid #1e7e34;
+  padding: 10px;
+}
